# rustls-embedded-demo

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: aead.rs  lib.rs  main.rs  verify.rs
