[package]
name = "no-std-embedded-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = { version = "0.1", features = [
    "defmt",
    "stm32f429zi",
    "unstable-pac",
    "memory-x",
    "time-driver-any",
] }
embassy-sync = { version = "0.6", features = [
    "defmt",
] }
embassy-executor = { version = "0.6", features = [
    "nightly",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.3", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-net = { version = "0.4", features = [
    "defmt",
    "tcp",
    "udp",
    "dns",
    "dhcpv4",
    "medium-ethernet",
] }
embassy-futures = { version = "0.1" }
embedded-io-async = "0.6.1" # `TcpSocket::write_all`

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
getrandom = { version = "0.2.11", features = ["custom"] }
linked_list_allocator = "0.10.5"
panic-probe = { version = "0.3", features = ["print-defmt"] }
smoltcp = { version = "*", default-features = false, features = ["dns-max-server-count-2"] }
spin = { version = "0.9.8", default-features = false, features = [
    "spin_mutex",
    "once",
] }
static_cell = { version = "2", features = ["nightly"] }
webpki-roots = "0.26"

# crypto-provider
chacha20poly1305 = { version = "0.10.0", default-features = false, features = [
    "alloc",
] }
der = "0.7.0"
ecdsa = "0.16.8"
hmac = "0.12.0"
hpke-rs = { version = "0.1.2", optional = true }
hpke-rs-crypto = { version = "0.1.2", optional = true }
hpke-rs-rust-crypto = { version = "0.1.2", optional = true }
p256 = { version = "0.13.2", default-features = false, features = [
    "alloc",
    "ecdsa",
    "pkcs8",
] }
pkcs8 = { version = "0.10.2" }
rand_core = { version = "0.6", features = ["getrandom"] }
# Same content than pinned-apis branch and pinned-version tag
rustls = { version="0.23", default-features = false, features = ["tls12"]}

rsa = { version = "0.9.0", features = ["sha2"], default-features = false }
sha2 = { version = "0.10.0", default-features = false }
signature = "2"
webpki = { package = "rustls-webpki", version = "0.102", features = [
    "alloc",
], default-features = false }
x25519-dalek = "2"
heapless = "0.8.0"

# for memory tracing
tlsf = "1.1.0"

[profile.dev]
opt-level = 3

[profile.release]
debug = 2
opt-level = 3

[workspace]

[patch.crates-io]
# take fix for network-reachable dhcp panic in smoltcp
embassy-net = { git = "https://github.com/embassy-rs/embassy.git", rev = "168a9f9d8ab451ca724e68de777e4e1601f865dd" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", rev = "168a9f9d8ab451ca724e68de777e4e1601f865dd" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "168a9f9d8ab451ca724e68de777e4e1601f865dd" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy.git", rev = "168a9f9d8ab451ca724e68de777e4e1601f865dd" }
embassy-time-queue-driver = { git = "https://github.com/embassy-rs/embassy.git", rev = "168a9f9d8ab451ca724e68de777e4e1601f865dd" }
